Update yarn deps, plus new swagger api
